# gpumd-lsp

./: .gitignore  README.md  index.md  log.md  lsp-capabilities.json  pyproject.toml
docs/: LLM-WIKI-PLAN.md
raw/assets/: DIAGNOSTIC_ENGINE_V1.md  examples-nep-training.in  examples-thermal-conductivity.in  pyproject.toml  run.in  upstream-sources.md
scripts/: wiki-lint.sh
src/gpumd_lsp/: __init__.py  agent_api.py  agent_lsp.py  analyzer.py  cli.py  completion.py  hover.py  lint.py  server.py  tool.py
tests/: test_analyzer.py  test_rich_diagnostics_contract.py  test_server.py
tests/fixtures/invalid_args/: run.in
tests/fixtures/invalid_nep/: nep.in
tests/fixtures/invalid_run/: run.in
tests/fixtures/invalid_thermostat/: run.in
tests/fixtures/missing_model/: run.in
tests/fixtures/nested/: other.txt  run.in
tests/fixtures/runtime_error/: run.in  run.out
tests/fixtures/valid_nep/: nep.in
wiki/concepts/: diagnostic-engine-v1.md  error-handling.md  lsp-architecture.md  matmaster-integration.md  performance-optimization.md  thermal-transport.md
wiki/entities/: compute-commands.md  diagnostic-codes.md  dump-commands.md  ensemble-thermostat.md  gpumd-software.md  nep-potential.md  output-files.md  phonon-analysis.md  run-in-format.md  xyz-format.md
wiki/synthesis/: api-reference.md  command-reference.md  input-format-guide.md  openqc-agent-context.md  workflow-guide.md
